--- a/public/css/typeIt.css
+++ b/public/css/typeIt.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Cutive+Mono);
+@import url(https://fonts.googleapis.com/css?family=Cutive+Mono);
 body {
     font: 16px/20px 'Cutive Mono', serif;
     background: white;
